option('build-examples', type: 'boolean', value: true)

########### external dependendencies:
# one option with `library_name`, type boolean
# one option with `library_name-dir`, type string

# mkl
option('mkl', type: 'boolean', value: true)
option('mkl-dir', type: 'string', value: '')

# itensor
option('itensor', type: 'boolean', value: true)
option('itensor-dir', type: 'string', value: '')

# arpack
option('arpack', type: 'boolean', value: false)
option('arpack-dir', type: 'string', value: '')

####### end of external dependencies


# rsvd (bundled)
option('rsvd', type: 'boolean', value: false)
option('lbfgs', type: 'boolean', value: true)

