option('build-examples', type: 'boolean', value: true)
option('enable-tests', type: 'boolean', value: false)
option('openmp', type: 'boolean', value: true, description: 'enable openMP support')

########### external dependendencies:
# one option with `library_name`, type boolean
# one option with `library_name-dir`, type string

# mkl
option('mkl', type: 'boolean', value: false)
option('mkl-dir', type: 'string', value: '')

# lapack
option('lapack', type: 'boolean', value: true)
option('lapack-dir', type: 'string', value: '')

# itensor
option('itensor', type: 'boolean', value: true)
option('itensor-dir', type: 'string', value: '')

# arpack
option('arpack', type: 'boolean', value: false)
option('arpack-dir', type: 'string', value: '')

####### end of external dependencies


# rsvd (bundled)
option('rsvd', type: 'boolean', value: false)
option('lbfgs', type: 'boolean', value: true)

# used to pass additional arguments when running tidy
# target e.g. '-fix-errors' to apply fixes proposed
# by the linter
option('tidy_args', type: 'string', value: '', description:'additional arguments passed to clang-tidy through the target tidy') 
