include_dirs += include_directories('.')

install_headers(['arpack-rcdn.h',
                 'cluster-ev-builder.h',
                 'ctm-cluster-env_v2.h',
                 'ctm-cluster-global.h',
                 'ctm-cluster.h',
                 'ctm-cluster-basic.h',
                 'ctm-cluster-io.h',
                 'cluster-factory.h',
                 'lattice.h',
                 'engine.h',
                 'engine-factory.h',
                 'full-update.h',
#                 'full-update-TEST.h',
                 'json.hpp',
                 'models.h',
                 'model-factory.h',
                 'mpo.h',
                 'simple-update_v2.h',
                 'su2.h',
		 'itensor-svd-solvers.h',
		 'linsyssolvers-lapack.h',
		 'itensor-linsys-solvers.h',
                 'lapacksvd-solver.h',
                 'rsvd-solver.h'])

subdir('models')
