source_files += files([
                       'cluster-ev-builder.cc', 
                       'transfer-op.cc',
                       'engine.cc',           
                       'engine-factory.cc',
                       'fu-2site.cc',
                       'fu-3site.cc',
                       'fu-4site.cc',
                       'simple-update.cc', 
                       'models.cc',
                       'model-factory.cc',
                       'ctm-env.cc', 
                       'ctmrg.cc',
		       'ctm-cluster-io.cc',
                       'ctm-cluster.cc',
                       'ctm-cluster-basic.cc',
                       'cluster-factory.cc',
                       'svdsolver-factory.cc',
                       'lattice.cc',
                       'mpo.cc',
                       'su2.cc'])

subdir('models')
subdir('linalg')
