
_lbfgs_include = include_directories('.')
_lbfgs_install_headers = install_headers(['include/LBFGS.h',
                                          'include/LBFGS/LineSearchBracketing.h',
                                          'include/LBFGS/LineSearch.h',
                                          'include/LBFGS/Param.h'])
