
_rsvd_include = include_directories('.')
_rsvd_source_files = files(['matrix_vector_functions_intel_mkl.cc',
                           'rank_revealing_algorithms_intel_mkl.cc'])
_rsvd_install_headers = install_headers(['matrix_vector_functions_intel_mkl.h',
                                         'rank_revealing_algorithms_intel_mkl.h'])
