install_headers(['cluster-ev-builder.h',
                 'cluster-factory.h',
                 'ctm-cluster-basic.h',
                 'ctm-cluster-env.h',
                 'ctm-env.h',
                 'ctm-cluster-global.h',
                 'ctm-cluster.h',
                 'ctm-cluster-io.h',
                 'engine-factory.h',
                 'engine.h',
                 'fu-3site-corboz.h',
                 'full-update.h',
                 'lattice.h',
                 'model-factory.h',
                 'models.h',
                 'mpo.h',
                 'rsvd-solver.h',
                 'simple-update.h',
                 'su2.h',
                 'svdsolver-factory.h'],
                subdir:'pi-peps')

subdir('linalg')
subdir('models')
